--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link href="../vendors/bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
+<!--    <link href="../vendors/bootswatch/bootstrap.min-2.css" rel="stylesheet"/>-->
     <link href="../vendors/fontawesome/fontawesome-free-6.2.0-web/css/all.min.css" rel="stylesheet"/>
 <!--    <link href="../vendors/bootswatch/bootstrap.min.css" rel="stylesheet"/>-->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
